--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongodb": "^5.3.0",
     "mongoose": "^7.1.0",
     "next": "^13.3.1",
+    "next-connect": "^0.13.0",
     "postcss": "^8.4.23",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-preset-env": "^8.3.2",
