--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-config-next": "13.3.1",
     "graphql": "^16.6.0",
     "graphql-playground-middleware-express": "^1.7.23",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
     "mongodb": "^5.3.0",
