--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@apollo/client": "^3.7.12",
     "@apollo/react-hooks": "^4.0.0",
+    "@apollo/server": "^4.9.1",
+    "@as-integrations/next": "^2.0.1",
     "apollo-server-micro": "^3.12.0",
     "autoprefixer": "^10.4.14",
     "bcrypt": "^5.1.0",
