--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@apollo/react-hooks": "^4.0.0",
     "@apollo/server": "^4.9.1",
     "@as-integrations/next": "^2.0.1",
+    "@types/node": "^20.8.2",
+    "@types/react": "^18.2.25",
+    "@uploadthing/react": "^5.6.2",
     "apollo-server-micro": "^3.12.0",
     "autoprefixer": "^10.4.14",
     "bcrypt": "^5.1.0",
@@ -38,6 +41,8 @@
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
     "react-select": "^5.7.3",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.2.2",
+    "uploadthing": "^5.7.1"
   }
 }
